<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/weapon_image"
        android:padding="@dimen/item_image_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/InfoViewItemTitle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <ImageView
        android:id="@+id/scaling_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/type_of_item_image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaling_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/extra_info_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/extra_info_1_label"
            style="@style/InfoViewExtraInfoHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/extra_info_2_label"
            app:layout_constraintEnd_toStartOf="@+id/extra_info_2_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extra_info_2_label"
            style="@style/InfoViewExtraInfoHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/extra_info_3_label"
            app:layout_constraintStart_toEndOf="@+id/extra_info_1_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extra_info_3_label"
            style="@style/InfoViewExtraInfoHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/extra_info_2_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extra_info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/extra_info_1_label"
            app:layout_constraintStart_toStartOf="@+id/extra_info_1_label"
            app:layout_constraintTop_toTopOf="@+id/extra_info_2" />

        <TextView
            android:id="@+id/extra_info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/extra_info_2_label"
            app:layout_constraintStart_toStartOf="@+id/extra_info_2_label"
            app:layout_constraintTop_toBottomOf="@+id/extra_info_2_label" />

        <TextView
            android:id="@+id/extra_info_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/extra_info_3_label"
            app:layout_constraintStart_toStartOf="@+id/extra_info_3_label"
            app:layout_constraintTop_toTopOf="@+id/extra_info_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description_title"
        android:textAppearance="@style/InfoViewItemDescriptionHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_info_container" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/description_title"
        app:layout_constraintTop_toBottomOf="@+id/description_title" />

    <TextView
        android:id="@+id/blueprint_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/blueprint_location"
        android:textAppearance="@style/InfoViewItemDescriptionHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/blueprint_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/blueprint_location_title"
        app:layout_constraintTop_toBottomOf="@+id/blueprint_location_title" />
</androidx.constraintlayout.widget.ConstraintLayout>